add react router, use LinkTo, and fix warnings

--- a/src/components/CallToAction.css
+++ b/src/components/CallToAction.css
@@ -84,6 +84,11 @@
   }
 }
 
+.reserve-table-button:hover {
+  cursor: pointer;
+  background-color: #f1f0f0;
+}
+
 .call-to-action-section-right-column {
   display: flex;
   flex-flow: column wrap;
