--- a/src/components/BookingExistingReservations.css
+++ b/src/components/BookingExistingReservations.css
@@ -34,11 +34,14 @@
   grid-column: 2 / 11;
   padding-top: 15px;
   grid-row: 2;
+  font-size: 11px;
+  font-family: "Times New Roman", Times, serif;
 }
 
 @media (min-width: 440px) {
   .booking-existing-reservations-section-content {
     padding-top: 25px;
     margin-bottom: 25px;
+    font-size: 16px;
   }
 }
